resolved failing integration tests